--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "aos": "^2.3.4",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-fast-marquee": "^1.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
