--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-fast-marquee": "^1.5.2"
+    "react-fast-marquee": "^1.5.2",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
